<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:fitsSystemWindows="true"
    tools:context=".ui.activity.MovieOverviewActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/defaultCardBackground"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Light"
        app:elevation="0dp">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:contentScrim="@android:color/transparent"
            app:layout_scrollFlags="scroll"

            app:titleEnabled="false">

            <ImageView
                android:id="@+id/overview_backdrop"
                android:layout_width="match_parent"
                android:layout_height="352dp"
                android:src="@drawable/ic_landscape_128dp"
                app:layout_collapseMode="parallax" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/backdrop_gradient_scrim"
                app:layout_collapseMode="pin" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:layout_marginTop="?android:attr/actionBarSize"
                android:gravity="bottom"
                android:orientation="vertical"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="16dp"
                app:layout_collapseMode="pin"
                app:layout_collapseParallaxMultiplier="0.75">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <android.support.v7.widget.CardView
                        android:layout_width="100dp"
                        android:layout_height="150dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        app:cardBackgroundColor="@color/defaultCardBackground"
                        app:cardCornerRadius="2dp"
                        app:cardElevation="16dp">

                        <ImageView
                            android:id="@+id/movie_poster"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="centerInside"
                            android:src="@drawable/ic_movie_48dp" />

                    </android.support.v7.widget.CardView>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:orientation="vertical"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp">

                        <TextView
                            android:id="@+id/movie_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/movie_title_placeholder"
                            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

                        <TextView
                            android:id="@+id/status"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/movie_status_placeholder"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                        <TextView
                            android:id="@+id/movie_release_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:fontFamily="sans-serif-condensed"
                            android:maxLines="3"
                            android:text="@string/movie_release_date_placeholder"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/overview_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                android:layout_marginTop="16dp"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/overview_information_title"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="16dp">

                    <TextView
                        android:id="@+id/movie_overview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_overview_placeholder" />

                </LinearLayout>

            </LinearLayout>

            <!-- Main Cast Wrapper Layout -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/main_cast_header_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/cast_information_title"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                    <android.support.design.button.MaterialButton
                        android:id="@+id/view_all_crew_button"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:text="@string/more_button_label"
                        app:cornerRadius="30dp"
                        app:strokeColor="@color/colorAccent"
                        app:strokeWidth="1dp" />

                </LinearLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/grid_main_cast"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipChildren="false"
                    android:clipToPadding="false"
                    android:orientation="vertical"
                    android:paddingStart="14dp"
                    android:paddingEnd="14dp"
                    app:layoutManager="android.support.v7.widget.GridLayoutManager"
                    app:spanCount="4"
                    tools:listitem="@layout/actor_item_layout" />

            </LinearLayout>

            <!-- Movie Info Wrapper Layout -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/additional_information_title"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                </LinearLayout>

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TableRow android:padding="16dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:orientation="vertical"
                                android:padding="4dp">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/release_information_title"
                                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                                    android:textStyle="bold" />

                                <TextView
                                    android:id="@+id/release_date"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/movie_release_date_placeholder"
                                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:orientation="vertical"
                                android:padding="4dp">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/runtime_information_title"
                                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                                    android:textStyle="bold" />

                                <TextView
                                    android:id="@+id/runtime"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/movie_runtime_placeholder"
                                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                            </LinearLayout>

                        </LinearLayout>

                    </TableRow>

                </TableLayout>

            </LinearLayout>

            <!-- Genre Info Wrapper Layout -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingBottom="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/genres_information_title"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                </LinearLayout>

                <android.support.design.chip.ChipGroup
                    android:id="@+id/genre_chip_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:layout_marginEnd="14dp"
                    app:chipSpacing="4dp"
                    app:singleLine="false">

                </android.support.design.chip.ChipGroup>

            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>